--- a/index.html
+++ b/index.html
@@ -60,3 +60,5 @@
         <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     </body>
 </html>
+
+<!--To work on: Create the same form wihout using <br> tags-->
