Replaced <br> tags

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
         </div>
         <div class="container">
             <form id="survey-form" action="" method="GET">
-                <label for="name" id="name-label">Name</label><br>
-                <input type="text" id="name" name="name" required placeholder ="Enter your name"><br>
-                <label for="email" id="email-label">Email</label><br>
-                <input type="email" id="email" name="email" required placeholder ="Enter your email"><br>
-                <label for="number" id="number-label">Age</label><br>
-                <input type="number" id="number" name="number" min="1" max="130" placeholder ="Enter your age"><br>
+                <label for="name" id="name-label">Name</label>
+                <input type="text" id="name" name="name" required placeholder ="Enter your name">
+                <label for="email" id="email-label">Email</label>
+                <input type="email" id="email" name="email" required placeholder ="Enter your email">
+                <label for="number" id="number-label">Age</label>
+                <input type="number" id="number" name="number" min="1" max="130" placeholder ="Enter your age">
                 <label for="dropdown">Which option best describes your experience with us?</label>
                 <select id="dropdown" name="dropdown">
                     <option disabled selected="" value="">Select one of the options</option>
@@ -30,25 +30,17 @@
                 </select>
                 <div class="radio-check">
                     <p>Would you reccommend your friends to stay with us?</p>
-                    <input type="radio" name="stay" id="yes" value="yes">
-                    <label for="yes">Yes</label><br>
-                    <input type="radio" name="stay" id="no" value="no">
-                    <label for="no">No</label><br>
-                    <input type="radio" name="stay" id="maybe" value="maybe">
-                    <label for="maybe">Maybe</label><br>
+                    <label for="yes"><input type="radio" name="stay" id="yes" value="yes">Yes</label>
+                    <label for="no"><input type="radio" name="stay" id="no" value="no">No</label>
+                    <label for="maybe"><input type="radio" name="stay" id="maybe" value="maybe">Maybe</label>
                 </div>
                 <div class="radio-check">
                     <p>Which of our activities did you enjoy the most? <span style="font-size: 15px;">(Check all that appy)</span></p>
-                    <input type="checkbox" name="activities" id="bike" value="bike">
-                    <label for="bike">Cycling</label><br>
-                    <input type="checkbox" name="activities" id="hike" value="hike">
-                    <label for="hike">Hiking</label><br>
-                    <input type="checkbox" name="activities" id="climb" value="climb">
-                    <label for="climb">Climbing</label><br>
-                    <input type="checkbox" name="activities" id="sight" value="sight">
-                    <label for="sight">Sightseeing</label><br>
-                    <input type="checkbox" name="activities" id="animals" value="animals">
-                    <label for="animals">Working with animals</label><br>
+                    <label for="bike"><input type="checkbox" name="activities" id="bike" value="bike">Cycling</label>
+                    <label for="hike"><input type="checkbox" name="activities" id="hike" value="hike">Hiking</label>
+                    <label for="climb"><input type="checkbox" name="activities" id="climb" value="climb">Climbing</label>
+                    <label for="sight"><input type="checkbox" name="activities" id="sight" value="sight">Sightseeing</label>
+                    <label for="animals"><input type="checkbox" name="activities" id="animals" value="animals">Working with animals</label>
                 </div>
                 <div class="text-area">
                     <label for="text-box">Do you have anything else that you would like us to know?</label>
