--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
         <link rel="stylesheet" href="styles.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet"> 
+        <meta name="viewport" content="width=device-width, initial-scale=1"> <!--For resposive to work on mobile-->
     </head>
     <body>
+        <!--Title-->
         <div class="header">
             <h1 id="title">Mountain hut survey form</h1>
             <p id="description"><em>Thank you for staying with us. Please solve this questionnaire so we can provide even better service in the future.</em></p>
         </div>
+        <!--Survey form-->
         <div class="container">
             <form id="survey-form" action="" method="GET">
                 <label for="name" id="name-label">Name</label>
@@ -52,5 +55,3 @@
         <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     </body>
 </html>
-
-<!--To work on: Create the same form wihout using <br> tags-->
